# special-stack

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  readme.md
.github/workflows/: docker-image.yml
.moon/: toolchain.yml  workspace.yml
apps/estrois/: .env.example  .gitignore  Dockerfile  compose.yaml  go.mod  go.sum  main.go  moon.yml
apps/estrois/docker/: compose.yml
apps/estrois/docker/garage/: garage.toml
apps/mule/: .gitignore  Cargo.toml  Dockerfile  compose.yaml  moon.yml  readme.md
apps/mule/cdn_root/: satoshi.txt
apps/mule/data/: cache_mappings.db
apps/mule/src/: cache.rs  config.rs  db.rs  main.rs  shutdown.rs  utils.rs
apps/mule/src/handlers/: file.rs  health.rs  management.rs  mod.rs
apps/wopper/: .gitignore  Dockerfile  README.md  bun.lockb  compose.yaml  moon.yml  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
apps/wopper/src/: app.css  app.html
apps/wopper/src/routes/: +page.svelte  HUD.svelte
k8s/mule/: Chart.yaml  values.yaml
k8s/mule/templates/: NOTES.txt  _helpers.tpl  add-gif.yaml  deployment.yaml  gateway.yml  ingress.yaml  pvc.yaml  service.yaml
k8s/mule/templates/tests/: test-connection.yaml
k8s/wopper/: Chart.yaml  values.yaml
k8s/wopper/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  gateway.yml  ingress.yaml  service.yaml
k8s/wopper/templates/tests/: test-connection.yaml
src/: main.rs
