[package]
name = "mule"
version = "24.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = 0
strip = "debuginfo"

[dependencies]
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt"], default-features = false }
sha2 = { version = "0.9", default-features = false }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls","sqlite"], default-features = false }
reqwest = { version = "0.12.5",features = ["json"] }
